--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     // Material Design Components (for modern UI/UX support)
     implementation 'com.google.android.material:material:1.9.0'
+
+    //SwipeRefreshLayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
 }
